force-app/main/default/objects/Product_Availability__c/Product_Availability__c.object-meta.xml
<CustomObject>
    <description>Shareable junction that entitles a Product2 record to a Region. Used because Product2 does not support sharing rules, manual sharing, or OwnerId.</description>
    <label>Product Availability</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Availability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Availabilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>