force-app/main/default/objects/Product_Availability__c/fields/Can_View_Price__c.field-meta.xml
<CustomField>
    <fullName>Can_View_Price__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Maps to CommerceEntitlementPolicy.CanViewPrice when this availability is published.</description>
    <label>Can View Price</label>
    <type>Checkbox</type>
</CustomField>