force-app/main/default/objects/Product_Availability__c/fields/Can_View_Product__c.field-meta.xml
<CustomField>
    <fullName>Can_View_Product__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Maps to CommerceEntitlementPolicy.CanViewProduct when this availability is published.</description>
    <label>Can View Product</label>
    <type>Checkbox</type>
</CustomField>