force-app/main/default/objects/Product_Availability__c/fields/Commerce_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Commerce_Sync_Status__c</fullName>
    <label>Commerce Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>