force-app/main/default/objects/Product_Availability__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The sellable Product2 record being entitled to a region.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Availabilities</relationshipLabel>
    <relationshipName>Product_Availabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>