force-app/main/default/objects/Product_Availability__c/fields/Product_Region_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Region_Key__c</fullName>
    <description>Composite unique key ProductId-RegionCode. Prevents duplicate regional entitlements for the same product.</description>
    <externalId>true</externalId>
    <label>Product Region Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>