force-app/main/default/objects/Product_Availability__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Region where this product may be viewed and sold.</description>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Product Availabilities</relationshipLabel>
    <relationshipName>Product_Availabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>