force-app/main/default/objects/Product_Availability__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <description>Stamped from Region.Region_Code__c so criteria-based sharing rules can filter without a cross-object formula.</description>
    <label>Region Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>