force-app/main/default/objects/Product_Availability__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Farm or artisan producer that supplies this product in this region.</description>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplied Product Availabilities</relationshipLabel>
    <relationshipName>Supplied_Product_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>