force-app/main/default/objects/Product_Availability__c/validationRules/Effective_Dates_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Dates_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Effective_From__c)),
  NOT(ISBLANK(Effective_To__c)),
  Effective_To__c &lt; Effective_From__c
)</errorConditionFormula>
    <errorDisplayField>Effective_To__c</errorDisplayField>
    <errorMessage>Effective To must be on or after Effective From.</errorMessage>
</ValidationRule>