force-app/main/default/objects/Product_Availability__c/validationRules/Restrict_Edit_Outside_User_Region.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Edit_Outside_User_Region</fullName>
    <active>true</active>
    <description>Regional merchandisers can only maintain availability in their operating region. Catalog admins bypass this rule.</description>
    <errorConditionFormula>AND(
  NOT($Permission.FSG_Bypass_Region_Validation),
  NOT(ISBLANK($User.Operating_Region__c)),
  NOT(ISBLANK(Region__c)),
  Region__c &lt;&gt; $User.Operating_Region__c
)</errorConditionFormula>
    <errorDisplayField>Region__c</errorDisplayField>
    <errorMessage>You can only create or edit Product Availability records for your operating region.</errorMessage>
</ValidationRule>