force-app/main/default/objects/Product_Availability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Region__c</columns>
    <columns>Region_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Supplier_Account__c</columns>
    <columns>Commerce_Sync_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Availabilities</label>
</ListView>