force-app/main/default/objects/Product_Availability__c/listViews/Published.listView-meta.xml
<ListView>
    <fullName>Published</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Region__c</columns>
    <columns>Region_Code__c</columns>
    <columns>Supplier_Account__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Published</label>
</ListView>